# databaseDB

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
src/common/: config.hpp  types.hpp
src/storage/: disk_manager.cpp  disk_manager.hpp
